--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -30,7 +30,7 @@
 
 @media(max-width: 768px){
     .card {
-        width: calc(50% - 2px);
+        width: calc(50% - 3px);
     }
     .card.mobile-full{
         position: sticky;
@@ -154,7 +154,7 @@
     .card.mobile-full .resize{position: absolute; z-index: 4; box-shadow: 0px 0px 15px black;}
     .card.mobile-full .resize{top: -60px;width: 200%; right: 0; border:2px solid white;}
 
-    .card:nth-child(5n + 5){width: 100% !important;}
+    .card:nth-child(5n + 5){width: calc(100% - 4px) !important}
     .card:nth-child(5n + 5) .image-plus{display: none;}
 
     .card.mobile-full:nth-child(1) .resize, .card.mobile-full:nth-child(3) .resize,
