--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -3,7 +3,7 @@
     background:black;
     padding: 0px 10px;
 
-    width: calc(100% - 20px);
+    width: 100%;
     margin: auto;
     /* box-shadow: 0px 0px 5px black; */
     border-radius: 2px;
